# chiori

./: .env.dist  .gitignore  LICENSE  README.md  plugins.toml  pyproject.toml
chioricord/: __init__.py  __main__.py  bot.py  client.py  config.py  db.py  errors.py  events.py  hooks.py  plugin.py  roles.py
chioricord/api/: __init__.py  config.py  db.py  roles.py
chioricord/storage/: json.py
cogs/: color.py  funbox.py  gpt.py
exstensions/: coins.py  find pair.py  funbox.py  gc.py  guess_number.py  inventory.py  mines.py  nya.py  pluginlist.py  rock_paper_scissors.py  rune.py  tic_tac_toe.py  utils.py  wordgame.py
extensions/: README.md  active_levels.py  avatar_effect.py  coins.py  color.py  config_manager.py  ext_manager.py  find pair.py  find_pair.py  funbox.py  guess_number.py  inventory.py  lingua.py  logger.py  math_test.py  members_active.py  message_filter.py  mines.py  modcraft.py  music.py  neko_life.py  nekos_best.py  nekos_life.py  nya.py  pluginlist.py  rep.py  rock_paper_scissors.py  rune.py  shotgun.py  some_utils.py  static_embeds.py  tg_hook.py  tic_tac_toe.py  unraid.py  use_stat.py  utils.py  welcome.py  word_game.py
extensions/contrib/: modcraft.py  nekos_best.py  nekos_life.py  tg_hook.py
extensions/eco/: coins.py  role_shop.py
extensions/guild/: lingua.py  logger.py  message_filter.py  music.py  some_utils.py  static_embeds.py  unraid.py  welcome.py
extensions/manage/: channels.py  config_manager.py  ext_manager.py  logger.py  pluginlist.py  roles.py  use_stat.py
extensions/mini_games/: find_pair.py  gc.py  guess_number.py  math_test.py  mines.py  rock_paper_scissors.py  shotgun.py  tic_tac_toe.py  word_game.py
extensions/profile/: active.py  inventory.py
extensions/system/: ext_manager.py  roles.py  use_stat.py
extensions/templates/: nya.py  rep.py
extensions/utils/: avatar_effect.py  color.py
extensions/voice/: active.py  events.py  messages.py
libs/: active_levels.py  ai_context.py  channels.py  coinengine.py  color.py  inventory.py  lingua.py  member_active.py  neko.py  rep.py  role_shop.py  static_embeds.py  timer.py  tiny_orm.py  use_stat.py  voice_events.py  warnsys.py
pytkb5/: __main__.py  bot.py
