# Project information --------------------------------------------------

[tool.poetry]
name = "ChioriCord"
version = "0.4"
description = "Multi-functional modular discord bot for fluffy your server"
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"

# Dependencies ---------------------------------------------------------

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
loguru = "^0.7.3"
aiosqlite = "^0.21.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.13"
nest-asyncio = "^1.6.0"

hikari = "^2.1.1"
hikari-arc = "^1.4.0"
hikari-miru = "^4.2.0"


# Dev Dependencies -----------------------------------------------------

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
icecream = "^2.1.3"
mypy = "^1.15.0"


# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL", "UP", "ANN", "W", "ASYNC"]
ignore = ["D407", "D107", "D213", "D203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# Build project --------------------------------------------------------

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
