[project]
name = "chioricord"
version = "0.6"
description = "Multi-functional modular discord bot for fluffy your server"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "GPL-3.0-or-later"
dependencies = [
    "aiohttp>=3.11",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.2",
    "hikari>=2.3.3",
    "hikari-arc>=2.1.1",
    "hikari-miru>=4.2.0",
    "hikari-ongaku>=0.2.1",
    "lavalink>=5.9.0",
    "loguru>=0.7.3",
    "mcstatus>=12.0.1",
    "openai>=1.84.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "toml>=0.10.2",
]

# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL", "UP", "ANN", "W", "ASYNC"]
ignore = ["D407", "D107", "D213", "D203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
hikari-ongaku = { git = "https://github.com/pentergust/ongaku" }

# Build system ---------------------------------------------------------

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.16.0"]
