[project]
name = "chioricord"
version = "0.7"
description = "Multi-functional modular discord bot for fluffy your server"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "GPL-3.0-or-later"
dependencies = [
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.2",
    "hikari>=2.3.3",
    "hikari-arc>=2.1.1",
    "hikari-miru>=4.2.0",
    "hikari-ongaku>=0.2.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "toml>=0.10.2",
    'uvloop>=0.21.0; sys_platform != "nt"',
]

[dependency-groups]
dev = ["mypy>=1.16.0"]
extensions = ["aiohttp>=3.12.14", "mcstatus>=12.0.2", "openai>=1.97.0"]


# Ruff linter ----------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL", "UP", "ANN", "W", "ASYNC"]
ignore = ["D407", "D107", "D213", "D203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
hikari-ongaku = { git = "https://github.com/pentergust/ongaku" }

# Build system ---------------------------------------------------------

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
